--- a/html/about-ch.html
+++ b/html/about-ch.html
@@ -259,7 +259,7 @@
     <div class="col-lg-8 col-sm-12 hidden-xs">
       <div class="row">
         <div class="col-lg-6 col-sm-6 summary">
-          沃顿中国峰会将于2018年4月13日至15日在宾夕法尼亚大学举行。由中国峰会基金会和宾夕法尼亚大学中国中心主办，并得到中国大使馆和宾夕法尼亚州政府的进一步支持。PWCS致力于建立一个有影响力的平台，促进两国之间的沟通，并建立美国在海外的学生之间的联系。拥有来自4个国家，34个洲和70多个城市的1500多名与会者，首届峰会已成为美国最大的学生组织峰会。 2018年是中美关系发展的重要一年。我们希望加强沟通，促进两国顶尖学生，专业人士和企业间的合作，为美中之间的长久友谊作出贡献。
+          沃顿中国峰会将于2018年4月13日至15日在宾夕法尼亚大学举行。由中国峰会基金会和宾夕法尼亚大学中国中心主办，并得到中国大使馆和宾夕法尼亚州政府的进一步支持。PWCS致力于建立一个有影响力的平台，促进两国之间的沟通，并建立美国在海外的学生之间的联系。拥有来自4个国家，34个州和70多个城市的1500多名与会者，首届峰会已成为美国最大的学生组织峰会。 2018年是中美关系发展的重要一年。我们希望加强沟通，促进两国顶尖学生，专业人士和企业间的合作，为美中之间的长久友谊作出贡献。
 
         </div>
         <div class="col-lg-6 col-sm-6 summary">
@@ -370,19 +370,9 @@
     <div class="teamBars center-txt col-lg-2 col-sm-3 col-12" onclick="currentSlide(5)">Administration</div>
         <div class="teamBars center-txt col-lg-2 col-sm-3 col-12" onclick="currentSlide(6)">Finance</div>
   </div>
-  <!-- Here are the profiles -->
-  <!-- Page 1 -->
+  <!-- Here are the profiles: Page 1-->
   <div class="ourProfiles fade-in">
     <div class="row">
-      <!-- <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/Zhilei_Zheng.png">
-        <h4>Zhilei Zheng</h4>
-        <h5>Technology Director</h5>
-        <div class="links">
-          <a href="https://www.linkedin.com/in/zhileiz/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="http://www.zhileiz.com/" target="_blank"><i class="icofont icofont-link-alt"></i></a>
-        </div>
-      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Ruoyang_Ni.jpeg">
         <h4>Rose Ni</h4>
@@ -392,6 +382,9 @@
         <img class="img-fluid" src="../assets/images/Shirley_Liu.jpeg">
         <h4>Shirley Liu</h4>
         <h5>Co-President</h5>
+        <div class="links">
+          <a href="https://www.instagram.com/shirdusoleil/" target="_blank"><i class="icofont icofont-social-instagram"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Yijing_Liu.jpg">
@@ -437,7 +430,7 @@
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Hailey_Feng.jpg">
-        <h4>Hailey Feng</h4>
+        <h4>Hanxiao Hailey Feng</h4>
         <h5>Operations Chair</h5>
       </div>
     </div>
@@ -463,14 +456,14 @@
           <a href="https://www.linkedin.com/in/davidchenpenn/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
-      <!-- <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Rachel_Yueqi.png">
         <h4>Rachel Wu</h4>
         <h5>Member</h5>
         <div class="links">
           <a href="https://www.linkedin.com/in/rachelyueqiwu/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
-      </div> -->
+      </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Jipeng_Liu.jpg">
         <h4>Jipeng Tony Liu</h4>
@@ -509,7 +502,8 @@
         <h5>Member</h5>
         <div class="links">
           <a href="https://www.linkedin.com/in/kangsamuel/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="https://www.facebook.com/kang.samuel" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://www.facebook.com/kang.samuel" target="_blank"><i class="icofont icofont-social-facebook"></i></a>&nbsp;
+          <a href="https://www.instagram.com/swk2605/" target="_blank"><i class="icofont icofont-social-instagram"></i></a>
         </div>
       </div>
       <!-- <div class="col-lg-2 col-sm-3 col-6">
@@ -530,7 +524,7 @@
         <h4>Qiaochu Guo</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/chen-kitty-154925134" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/qiaochu-nova-guo-805879128/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -570,18 +564,25 @@
         <img class="img-fluid" src="../assets/images/Zhilei_Zheng.png">
         <h4>Zhilei Zheng</h4>
         <h5>Vice Chair</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/zhileiz/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="http://www.zhileiz.com/" target="_blank"><i class="icofont icofont-link-alt"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Yilin_Liu.png">
         <h4>Elaine Liu</h4>
         <h5>Vice Chair</h5>
       </div>
-      <!-- <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Ashling_Sui.png">
         <h4>Ashling Sui</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/ashling-jingzi-s-7235baa1/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+        </div>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
+      <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Tracy Yan</h4>
         <h5>Member</h5>
@@ -609,6 +610,11 @@
         <img class="img-fluid" src="../assets/images/Xinning_Guo.png">
         <h4>Xinning Guo</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/xsguo/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="http://www.gxinning.com/" target="_blank"><i class="icofont icofont-link-alt"></i></a>
+          <a href="https://www.instagram.com/sherrygxn" target="_blank"><i class="icofont icofont-social-instagram"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Mindy_Ma.jpg">
@@ -655,7 +661,8 @@
         <h4>Yi Yang</h4>
         <h5>Vice Chair</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/yi-yang-378a989b/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/yi-yang-378a989b/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.instagram.com/yiyang7121/" target="_blank"><i class="icofont icofont-social-instagram"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -670,25 +677,27 @@
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>William Sun</h4>
         <h5>Member</h5>
-      </div>
+      </div>-->
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Wenhui_Zhao.png">
         <h4>Clover Zhao</h4>
         <h5>Volunteer</h5>
       </div>
+      <!--
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Zhiyuan Liu</h4>
         <h5>Volunteer</h5>
-      </div>
+      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Cecilia_Wang.png">
         <h4>Cecilia Wang</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/yixi-wang-272087158/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/yixi-wang-272087158/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.instagram.com/ybc18/" target="_blank"><i class="icofont icofont-social-instagram"></i></a>
         </div>
-      </div> -->
+      </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Lei_Wang.jpg">
         <h4>Lei Wang</h4>
@@ -697,15 +706,15 @@
           <a href="https://www.linkedin.com/in/lei-wang-084a64158/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
-      <!-- <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Yijie_Zhao.jpg">
         <h4>Lisa Yijie Zhao</h4>
         <h5>Member</h5>
         <div class="links">
           <a href="https://www.linkedin.com/in/lisa-zhao-48093b146/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
           <a href="https://www.facebook.com/lisa.zhao.1485" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
-      </div> -->
+      </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Gaorui_Liu.jpg">
         <h4>Ray Liu</h4>
@@ -714,6 +723,11 @@
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Wayne_Yang.jpg">
         <h4>Wenyao Yang</h4>
+        <h5>Member</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Sanny_Dai.png">
+        <h4>Sanny Dai</h4>
         <h5>Member</h5>
       </div>
       <!-- <div class="col-lg-2 col-sm-3 col-6">
@@ -766,7 +780,8 @@
         <h5>Member</h5>
         <div class="links">
           <a href="https://www.linkedin.com/in/claire-yu-b4799b155/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="https://www.facebook.com/yu.r.claire" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://www.facebook.com/yu.r.claire" target="_blank"><i class="icofont icofont-social-facebook"></i></a>&nbsp;
+          <a href="https://www.instagram.com/ybc18/" target="_blank"><i class="icofont icofont-social-instagram"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -806,12 +821,12 @@
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Jingxin Wang</h4>
         <h5>Vice Chair</h5>
-      </div>
+      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Lingpei_Zhou.jpeg">
         <h4>Lingpei Zhou</h4>
         <h5>Member</h5>
-      </div> -->
+      </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Carol_Zhou.jpeg">
         <h4>Carol Zhou</h4>
@@ -841,7 +856,7 @@
         <div class="stop-sign"></div>
       </div>
       <div class="col-12">
-        <img src="../assets/images/pwcs-banner.png" width="100%">
+        <img src="../assets/images/footer-banner.png" width="100%">
       </div>
     </div>
 
