--- a/html/about.html
+++ b/html/about.html
@@ -409,15 +409,6 @@
   <!-- Page 1 -->
   <div class="ourProfiles fade-in">
     <div class="row">
-      <!-- <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/Zhilei_Zheng.png">
-        <h4>Zhilei Zheng</h4>
-        <h5>Technology Director</h5>
-        <div class="links">
-          <a href="https://www.linkedin.com/in/zhileiz/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="http://www.zhileiz.com/" target="_blank"><i class="icofont icofont-link-alt"></i></a>
-        </div>
-      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Ruoyang_Ni.jpeg">
         <h4>Rose Ni</h4>
@@ -427,6 +418,9 @@
         <img class="img-fluid" src="../assets/images/Shirley_Liu.jpeg">
         <h4>Shirley Liu</h4>
         <h5>Co-President</h5>
+        <div class="links">
+          <a href="https://www.instagram.com/shirdusoleil/" target="_blank"><i class="icofont icofont-social-instagram"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Yijing_Liu.jpg">
@@ -472,7 +466,7 @@
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Hailey_Feng.jpg">
-        <h4>Hailey Feng</h4>
+        <h4>Hanxiao Hailey Feng</h4>
         <h5>Operations Chair</h5>
       </div>
     </div>
@@ -498,14 +492,14 @@
           <a href="https://www.linkedin.com/in/davidchenpenn/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
-      <!-- <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Rachel_Yueqi.png">
         <h4>Rachel Wu</h4>
         <h5>Member</h5>
         <div class="links">
           <a href="https://www.linkedin.com/in/rachelyueqiwu/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
-      </div> -->
+      </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Jipeng_Liu.jpg">
         <h4>Jipeng Tony Liu</h4>
@@ -544,7 +538,8 @@
         <h5>Member</h5>
         <div class="links">
           <a href="https://www.linkedin.com/in/kangsamuel/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="https://www.facebook.com/kang.samuel" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://www.facebook.com/kang.samuel" target="_blank"><i class="icofont icofont-social-facebook"></i></a>&nbsp;
+          <a href="https://www.instagram.com/swk2605/" target="_blank"><i class="icofont icofont-social-instagram"></i></a>
         </div>
       </div>
       <!-- <div class="col-lg-2 col-sm-3 col-6">
@@ -565,7 +560,7 @@
         <h4>Qiaochu Guo</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/chen-kitty-154925134" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/qiaochu-nova-guo-805879128/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -605,18 +600,25 @@
         <img class="img-fluid" src="../assets/images/Zhilei_Zheng.png">
         <h4>Zhilei Zheng</h4>
         <h5>Vice Chair</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/zhileiz/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="http://www.zhileiz.com/" target="_blank"><i class="icofont icofont-link-alt"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Yilin_Liu.png">
         <h4>Elaine Liu</h4>
         <h5>Vice Chair</h5>
       </div>
-      <!-- <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Ashling_Sui.png">
         <h4>Ashling Sui</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/ashling-jingzi-s-7235baa1/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+        </div>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
+      <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Tracy Yan</h4>
         <h5>Member</h5>
@@ -644,6 +646,11 @@
         <img class="img-fluid" src="../assets/images/Xinning_Guo.png">
         <h4>Xinning Guo</h4>
         <h5>Member</h5>
+        <div class="links">
+          <a href="https://www.linkedin.com/in/xsguo/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="http://www.gxinning.com/" target="_blank"><i class="icofont icofont-link-alt"></i></a>
+          <a href="https://www.instagram.com/sherrygxn" target="_blank"><i class="icofont icofont-social-instagram"></i></a>
+        </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Mindy_Ma.jpg">
@@ -690,7 +697,8 @@
         <h4>Yi Yang</h4>
         <h5>Vice Chair</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/yi-yang-378a989b/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/yi-yang-378a989b/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.instagram.com/yiyang7121/" target="_blank"><i class="icofont icofont-social-instagram"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -705,25 +713,27 @@
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>William Sun</h4>
         <h5>Member</h5>
-      </div>
+      </div>-->
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Wenhui_Zhao.png">
         <h4>Clover Zhao</h4>
         <h5>Volunteer</h5>
       </div>
+      <!--
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Zhiyuan Liu</h4>
         <h5>Volunteer</h5>
-      </div>
+      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Cecilia_Wang.png">
         <h4>Cecilia Wang</h4>
         <h5>Member</h5>
         <div class="links">
-          <a href="https://www.linkedin.com/in/yixi-wang-272087158/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/yixi-wang-272087158/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
+          <a href="https://www.instagram.com/ybc18/" target="_blank"><i class="icofont icofont-social-instagram"></i></a>
         </div>
-      </div> -->
+      </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Lei_Wang.jpg">
         <h4>Lei Wang</h4>
@@ -732,15 +742,15 @@
           <a href="https://www.linkedin.com/in/lei-wang-084a64158/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
-      <!-- <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Yijie_Zhao.jpg">
         <h4>Lisa Yijie Zhao</h4>
         <h5>Member</h5>
         <div class="links">
           <a href="https://www.linkedin.com/in/lisa-zhao-48093b146/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
           <a href="https://www.facebook.com/lisa.zhao.1485" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
-      </div> -->
+      </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Gaorui_Liu.jpg">
         <h4>Ray Liu</h4>
@@ -749,6 +759,11 @@
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Wayne_Yang.jpg">
         <h4>Wenyao Yang</h4>
+        <h5>Member</h5>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Sanny_Dai.png">
+        <h4>Sanny Dai</h4>
         <h5>Member</h5>
       </div>
       <!-- <div class="col-lg-2 col-sm-3 col-6">
@@ -801,7 +816,8 @@
         <h5>Member</h5>
         <div class="links">
           <a href="https://www.linkedin.com/in/claire-yu-b4799b155/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
-          <a href="https://www.facebook.com/yu.r.claire" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://www.facebook.com/yu.r.claire" target="_blank"><i class="icofont icofont-social-facebook"></i></a>&nbsp;
+          <a href="https://www.instagram.com/ybc18/" target="_blank"><i class="icofont icofont-social-instagram"></i></a>
         </div>
       </div>
       <div class="col-lg-2 col-sm-3 col-6">
@@ -841,12 +857,12 @@
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Jingxin Wang</h4>
         <h5>Vice Chair</h5>
-      </div>
+      </div> -->
       <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+        <img class="img-fluid" src="../assets/images/Lingpei_Zhou.jpeg">
         <h4>Lingpei Zhou</h4>
         <h5>Member</h5>
-      </div> -->
+      </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Carol_Zhou.jpeg">
         <h4>Carol Zhou</h4>
@@ -866,7 +882,6 @@
 
 
 
-
     <!--
       MARK: Footer
     -->
@@ -876,7 +891,7 @@
         <div class="stop-sign"></div>
       </div>
       <div class="col-12">
-        <img src="../assets/images/pwcs-banner.png" width="100%">
+        <img src="../assets/images/footer-banner.png" width="100%">
       </div>
     </div>
 
