--- a/html/agenda-ch.html
+++ b/html/agenda-ch.html
@@ -114,8 +114,10 @@
             </a>
           </div>
           <div class="col-3 no-padding right-txt">
-            <i class="icofont icofont-globe"></i>
-            中文
+            <a href="/agenda">
+              <i class="icofont icofont-globe"></i>
+              English
+            </a>
           </div>
           <div class="col-4 no-padding center-txt" id="m-alt-nav-btn">
             <i class="icofont icofont-navigation-menu"></i>
@@ -474,7 +476,7 @@
         <div class="stop-sign"></div>
       </div>
       <div class="col-12">
-        <img src="../assets/images/pwcs-banner.png" width="100%">
+        <img src="../assets/images/footer-banner.png" width="100%">
       </div>
     </div>
 
