--- a/html/home-ch.html
+++ b/html/home-ch.html
@@ -140,8 +140,10 @@
               </a>
             </div>
           <div class="col-3 no-padding right-txt">
-            <i class="icofont icofont-globe"></i>
-            English
+            <a href="/home">
+              <i class="icofont icofont-globe"></i>
+              English
+            </a>
           </div>
           <div class="col-4 no-padding center-txt" id="m-alt-nav-btn">
             <i class="icofont icofont-navigation-menu"></i>
@@ -308,6 +310,7 @@
           <div class="vertical-center center-txt">
             <div class="speakers-section-caption"><span class="crimson-txt">30+</span> 嘉宾</div>
             <div class="speakers-section-subcaption">专家实力，宏伟构图，深入见解</div>
+            <div style="font-family: avn-ultra, pf-ultra; font-size:15px; margin-top: 5px;">历届PWCS参会嘉宾:</div>
           </div>
         </div>
       </div>
@@ -758,7 +761,7 @@
         <div class="stop-sign"></div>
       </div>
       <div class="col-12">
-        <img src="../assets/images/pwcs-banner.png" width="100%">
+        <img src="../assets/images/footer-banner.png" width="100%">
       </div>
     </div>
 
