--- a/html/panels.html
+++ b/html/panels.html
@@ -193,7 +193,7 @@
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-2"> <a href="/panels">Speakers</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/agenda">Agenda</a> </div>
             <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-3"> <a href="/past">Past</a> </div>
-            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="/https://whartonchinasummit.ticketleap.com/" target="_blank">Register</a> </div>
+            <div class="col-8 offset-2 col-md-12 offset-md-0 navigation-item" id="item-6"> <a href="https://whartonchinasummit.ticketleap.com/" target="_blank">Register</a> </div>
           </div>
         </div>
         <div class="row hide" id="m-close-nav">
@@ -625,7 +625,7 @@
         <div class="stop-sign"></div>
       </div>
       <div class="col-12">
-        <img src="../assets/images/pwcs-banner.png" width="100%">
+        <img src="../assets/images/footer-banner.png" width="100%">
       </div>
     </div>
 
