--- a/html/past-ch.html
+++ b/html/past-ch.html
@@ -54,7 +54,7 @@
         <a href="/past">
           <div class="option" id="lang">
             <i class="icofont icofont-globe"></i><br/>
-            <span class="hover-text">ENGLISH</span>
+            <span class="hover-text">English</span>
           </div>
         </a>
       </div>
@@ -87,7 +87,7 @@
               <div class="nav-custom-item right-txt">
                 <a href="/home-ch">
                   <i class="icofont icofont-globe"></i>
-                    ENGLISH
+                    English
                 </a>
               </div>
               <div class="nav-custom-item right-txt" id="alt-nav-btn">
@@ -113,7 +113,7 @@
           <div class="col-3 no-padding right-txt">
             <a href="/past">
             <i class="icofont icofont-globe"></i>
-              ENGLISH
+              English
             </a>
           </div>
           <div class="col-4 no-padding center-txt" id="m-alt-nav-btn">
@@ -412,7 +412,7 @@
         <div class="stop-sign"></div>
       </div>
       <div class="col-12">
-        <img src="../assets/images/pwcs-banner.png" width="100%">
+        <img src="../assets/images/footer-banner.png" width="100%">
       </div>
     </div>
 
