--- a/html/home.html
+++ b/html/home.html
@@ -114,8 +114,10 @@
             </a>
           </div>
           <div class="col-3 no-padding right-txt">
-            <i class="icofont icofont-globe"></i>
-            中文
+            <a href="/home-ch">
+              <i class="icofont icofont-globe"></i>
+              中文
+            </a>
           </div>
           <div class="col-4 no-padding center-txt" id="m-alt-nav-btn">
             <i class="icofont icofont-navigation-menu"></i>
@@ -282,7 +284,8 @@
         <div class="col-12">
           <div class="vertical-center center-txt">
             <div class="speakers-section-caption"><span class="crimson-txt">30+</span> SPEAKERS</div>
-            <div class="speakers-section-subcaption">Big Names, Bigger Stories, Deeper Insights</div>
+            <div class="speakers-section-subcaption">Big Names, Better Stories, Deeper Insights</div>
+            <div style="font-family: avn-ultra, pf-ultra; font-size:15px; margin-top: 5px;">Past Speakers from PWCS 2016 and 2017:</div>
           </div>
         </div>
       </div>
@@ -299,42 +302,42 @@
           <div class="row">
             <div class="col-6 col-md-3 center-txt speaker-item">
               <img class="speaker-img" src="../assets/images/cuitiankai.jpg"/>
-              <div class="speaker-name">Tiankai Cui <span class="mobile-small">2016</span></div>
+              <div class="speaker-name">Tiankai Cui <span class="mobile-small hide">2016</span></div>
               <div class="speaker-title">Chinese Ambassador</div>
             </div>
             <div class="col-6 col-md-3 center-txt speaker-item">
               <img class="speaker-img" src="../assets/images/lining.jpg"/>
-              <div class="speaker-name">Li Ning <span class="mobile-small">2017</span></div>
+              <div class="speaker-name">Li Ning <span class="mobile-small hide">2017</span></div>
               <div class="speaker-title">CEO of Li-Ning</div>
             </div>
             <div class="col-6 col-md-3 center-txt speaker-item">
               <img class="speaker-img" src="../assets/images/panshiyi.jpg"/>
-              <div class="speaker-name">Shiyi Pan <span class="mobile-small">2017</span></div>
+              <div class="speaker-name">Shiyi Pan <span class="mobile-small hide">2017</span></div>
               <div class="speaker-title">CEO of SOHO China</div>
             </div>
             <div class="col-6 col-md-3 center-txt speaker-item">
               <img class="speaker-img" src="../assets/images/leijun2.jpg"/>
-              <div class="speaker-name">Lei Jun <span class="mobile-small">2016</span></div>
+              <div class="speaker-name">Lei Jun <span class="mobile-small hide">2016</span></div>
               <div class="speaker-title">CEO of XiaoMi</div>
             </div>
             <div class="col-6 col-md-3 center-txt speaker-item">
               <img class="speaker-img" src="../assets/images/chenkaige.jpg"/>
-              <div class="speaker-name">Kaige Chen <span class="mobile-small">2016</span></div>
+              <div class="speaker-name">Kaige Chen <span class="mobile-small hide">2016</span></div>
               <div class="speaker-title">Film Director</div>
             </div>
             <div class="col-6 col-md-3 center-txt speaker-item">
               <img class="speaker-img" src="../assets/images/zhouxin.jpg"/>
-              <div class="speaker-name">Zhou Xin <span class="mobile-small">2017</span></div>
+              <div class="speaker-name">Zhou Xin <span class="mobile-small hide">2017</span></div>
               <div class="speaker-title">CEO of EHouse China</div>
             </div>
             <div class="col-6 col-md-3 center-txt speaker-item">
               <img class="speaker-img" src="../assets/images/chenman.jpg"/>
-              <div class="speaker-name">Chen Man <span class="mobile-small">2016</span></div>
+              <div class="speaker-name">Chen Man <span class="mobile-small hide">2016</span></div>
               <div class="speaker-title">Photographer</div>
             </div>
             <div class="col-6 col-md-3 center-txt speaker-item">
               <img class="speaker-img" src="../assets/images/tedsmith.jpg"/>
-              <div class="speaker-name">Ted Smith <span class="mobile-small">2017</span></div>
+              <div class="speaker-name">Ted Smith <span class="mobile-small hide">2017</span></div>
               <div class="speaker-title">CEO of Sotheby's</div>
             </div>
           </div>
@@ -739,7 +742,7 @@
         <div class="stop-sign"></div>
       </div>
       <div class="col-12">
-        <img src="../assets/images/pwcs-banner.png" width="100%">
+        <img src="../assets/images/footer-banner.png" width="100%">
       </div>
     </div>
 
