last commit before first public push

--- a/html/about-ch.html
+++ b/html/about-ch.html
@@ -3,17 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/icofont.css">
-    <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/desktop.min.css">
     <link rel="stylesheet" href="../css/about.css">
-    <link rel="stylesheet" href="../css/global-mobile.css">
-    <link rel="stylesheet" href="../css/navbar-mobile.css">
-    <link rel="stylesheet" href="../css/header-mobile.css">
-    <link rel="stylesheet" href="../css/footer-mobile.css">
+    <link rel="stylesheet" href="../css/mobile.min.css">
     <link rel="stylesheet" href="../css/about-mobile.css">
     <style>
       @media only screen and (max-width: 767px) {
@@ -259,11 +251,11 @@
     <div class="col-lg-8 col-sm-12 hidden-xs">
       <div class="row">
         <div class="col-lg-6 col-sm-6 summary">
-          沃顿中国峰会将于2018年4月13日至15日在宾夕法尼亚大学举行。由中国峰会基金会和宾夕法尼亚大学中国中心主办，并得到中国大使馆和宾夕法尼亚州政府的进一步支持。PWCS致力于建立一个有影响力的平台，促进两国之间的沟通，并建立美国在海外的学生之间的联系。拥有来自4个国家，34个州和70多个城市的1500多名与会者，首届峰会已成为美国最大的学生组织峰会。 2018年是中美关系发展的重要一年。我们希望加强沟通，促进两国顶尖学生，专业人士和企业间的合作，为美中之间的长久友谊作出贡献。
+          沃顿中美峰会将于2018年4月13日至15日在宾夕法尼亚大学举行。由中国峰会基金会和宾夕法尼亚大学中国中心主办，并得到中国大使馆和宾夕法尼亚州政府的进一步支持。PWCS致力于建立一个有影响力的平台，促进两国之间的沟通，并建立美国在海外的学生之间的联系。拥有来自4个国家，34个州和70多个城市的1500多名与会者，首届峰会已成为美国最大的学生组织峰会。 2018年是中美关系发展的重要一年。我们希望加强沟通，促进两国顶尖学生，专业人士和企业间的合作，为美中之间的长久友谊作出贡献。
 
         </div>
         <div class="col-lg-6 col-sm-6 summary">
-          2018年沃顿中国峰会将包括主题演讲，小组讨论，竞赛和网络会议。这是来自两国的有抱负的学生，专业人士，企业家，公司和组织的聚会，将一同讨论中国社会和经济发展的现状和未来以及它与美国和世界的互动。2018年峰会主题是“我们这一代”，将讨论我们这一代，是在如何被赋予社会责任感的巨大创新后，重新定义中国未来。讨论将在六个专题板块中深入展开，包括艺术和娱乐，房地产，技术，社会责任，国际关系，金融和经济。
+          2018年沃顿中美峰会将包括主题演讲，小组讨论，竞赛和网络会议。这是来自两国的有抱负的学生，专业人士，企业家，公司和组织的聚会，将一同讨论中国社会和经济发展的现状和未来以及它与美国和世界的互动。2018年峰会主题是“我们这一代”，将讨论我们这一代，是在如何被赋予社会责任感的巨大创新后，重新定义中国未来。讨论将在六个专题板块中深入展开，包括艺术和娱乐，房地产，技术，社会责任，国际关系，金融和经济。
         </div>
       </div>
     </div>
@@ -681,7 +673,7 @@
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Wenhui_Zhao.png">
         <h4>Clover Zhao</h4>
-        <h5>Volunteer</h5>
+        <h5>Member</h5>
       </div>
       <!--
       <div class="col-lg-2 col-sm-3 col-6">
@@ -725,11 +717,6 @@
         <h4>Wenyao Yang</h4>
         <h5>Member</h5>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/Sanny_Dai.png">
-        <h4>Sanny Dai</h4>
-        <h5>Member</h5>
-      </div>
       <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Wenhui Zhao</h4>
@@ -766,14 +753,15 @@
           <a href="https://www.linkedin.com/in/chelsie-xu-532951149/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
-      <!-- <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Shangting_Sun.jpg">
         <h4>Shangting Sun</h4>
         <h5>Member</h5>
         <div class="links">
           <a href="https://www.facebook.com/lucy.sun.16" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://www.instagram.com/lucusub/" target="_blank"><i class="icofont icofont-social-instagram"></i></a>
         </div>
-      </div> -->
+      </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Claire_Yu.jpg">
         <h4>Claire Yu</h4>
@@ -801,6 +789,11 @@
           <a href="https://www.linkedin.com/in/yun-cynthia-li-74b305149/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
           <a href="https://www.facebook.com/cynthia.li.5817" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Sanny_Dai.png">
+        <h4>Sanny Dai</h4>
+        <h5>Member</h5>
       </div>
     </div>
   </div>
