--- a/html/about.html
+++ b/html/about.html
@@ -3,17 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/icofont.css">
-    <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/desktop.min.css">
     <link rel="stylesheet" href="../css/about.css">
-    <link rel="stylesheet" href="../css/global-mobile.css">
-    <link rel="stylesheet" href="../css/navbar-mobile.css">
-    <link rel="stylesheet" href="../css/header-mobile.css">
-    <link rel="stylesheet" href="../css/footer-mobile.css">
+    <link rel="stylesheet" href="../css/mobile.min.css">
     <link rel="stylesheet" href="../css/about-mobile.css">
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="../assets/favicons/favicon-196x196.png" sizes="196x196" />
@@ -270,7 +262,7 @@
         </div>
         <div class="col-lg-6 col-sm-6 summary">
           2018 Penn Wharton China Summit will consist of keynote addresses,
-          panel discussions, pitch competition and networking sessions. It is a
+          panel discussions, a startup pitch competition and networking sessions. It is a
           gathering of aspiring students, professionals, entrepreneurs, corporations,
           and organizations from both countries to discuss the present and future of
           China’s social and economic development and its interaction with the
@@ -394,7 +386,7 @@
 </div>
 <!-- Start of new team profile -->
 <div class="team-profile white-bg">
-  <h2 class="center-txt">Our Team</h2>
+  <h2 class="center-txt">Our Teams</h2>
   <div class="slide-container">
   <!-- These are the buttons -->
   <div class="row">
@@ -717,7 +709,7 @@
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Wenhui_Zhao.png">
         <h4>Clover Zhao</h4>
-        <h5>Volunteer</h5>
+        <h5>Member</h5>
       </div>
       <!--
       <div class="col-lg-2 col-sm-3 col-6">
@@ -761,11 +753,6 @@
         <h4>Wenyao Yang</h4>
         <h5>Member</h5>
       </div>
-      <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/Sanny_Dai.png">
-        <h4>Sanny Dai</h4>
-        <h5>Member</h5>
-      </div>
       <!-- <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/unnamed.png">
         <h4>Wenhui Zhao</h4>
@@ -802,14 +789,15 @@
           <a href="https://www.linkedin.com/in/chelsie-xu-532951149/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>
         </div>
       </div>
-      <!-- <div class="col-lg-2 col-sm-3 col-6">
-        <img class="img-fluid" src="../assets/images/unnamed.png">
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Shangting_Sun.jpg">
         <h4>Shangting Sun</h4>
         <h5>Member</h5>
         <div class="links">
           <a href="https://www.facebook.com/lucy.sun.16" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
+          <a href="https://www.instagram.com/lucusub/" target="_blank"><i class="icofont icofont-social-instagram"></i></a>
         </div>
-      </div> -->
+      </div>
       <div class="col-lg-2 col-sm-3 col-6">
         <img class="img-fluid" src="../assets/images/Claire_Yu.jpg">
         <h4>Claire Yu</h4>
@@ -837,6 +825,11 @@
           <a href="https://www.linkedin.com/in/yun-cynthia-li-74b305149/" target="_blank"><i class="icofont icofont-social-linkedin"></i></a>&nbsp;
           <a href="https://www.facebook.com/cynthia.li.5817" target="_blank"><i class="icofont icofont-social-facebook"></i></a>
         </div>
+      </div>
+      <div class="col-lg-2 col-sm-3 col-6">
+        <img class="img-fluid" src="../assets/images/Sanny_Dai.png">
+        <h4>Sanny Dai</h4>
+        <h5>Member</h5>
       </div>
     </div>
   </div>
