--- a/html/panels-ch.html
+++ b/html/panels-ch.html
@@ -1,20 +1,11 @@
-
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/icofont.css">
-    <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/desktop.min.css">
     <link rel="stylesheet" href="../css/panels.css">
-    <link rel="stylesheet" href="../css/global-mobile.css">
-    <link rel="stylesheet" href="../css/navbar-mobile.css">
-    <link rel="stylesheet" href="../css/header-mobile.css">
-    <link rel="stylesheet" href="../css/footer-mobile.css">
+    <link rel="stylesheet" href="../css/mobile.min.css">
     <link rel="stylesheet" href="../css/panels-mobile.css">
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="../assets/favicons/favicon-196x196.png" sizes="196x196" />
@@ -508,7 +499,7 @@
             <div class="row panel-desc">
               <div class="col">
                 <p>中国文化娱乐产业正处在前所未有的黄金时代。随着2015年影视行业的高速发展与2016、17年票房增速减缓，尽管中国电影票房经历了“过山车式”的大起大落，中国电影正在回归质量，曾经“泡沫化”的中国电影票房也处在“返璞归真”的过程中。除此之外，中国网剧，综艺与其他新媒体相关的影视娱乐输出也处在欣欣向荣的发展中。各大娱乐内容制作与发行公司都跃跃欲试，通过大量资本注入为中国娱乐产业提出新思路。</p>
-                <p>处在转型中的中国娱乐与时尚行业的业内人士会有怎样的反应与看法？近年的行业变化对他们的职业带来了什么样的影响？他们是否真切地感受到了资本注入对娱乐与时尚带来的冲击？即将进入2.0时代的他们对未来有怎样的预期？这些问题将在沃顿中国峰会的娱乐&时尚论坛得到最好的解答。</p>
+                <p>处在转型中的中国娱乐与时尚行业的业内人士会有怎样的反应与看法？近年的行业变化对他们的职业带来了什么样的影响？他们是否真切地感受到了资本注入对娱乐与时尚带来的冲击？即将进入2.0时代的他们对未来有怎样的预期？这些问题将在沃顿中美峰会的娱乐&时尚论坛得到最好的解答。</p>
                 <p class="time-location"> <i class="icofont icofont-location-pin"></i> &nbsp; Irvine Auditorium</p>
                 <p class="time-location"> <i class="icofont icofont-calendar"></i> &nbsp; 4月14日, 10:00am - 12:00am</p>
                 <p class="time-location"><i class="icofont icofont-globe"></i> &nbsp; 语言：中文</p>
