--- a/html/past.html
+++ b/html/past.html
@@ -3,17 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/icofont.css">
-    <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/desktop.min.css">
     <link rel="stylesheet" href="../css/past.css">
-    <link rel="stylesheet" href="../css/global-mobile.css">
-    <link rel="stylesheet" href="../css/navbar-mobile.css">
-    <link rel="stylesheet" href="../css/header-mobile.css">
-    <link rel="stylesheet" href="../css/footer-mobile.css">
+    <link rel="stylesheet" href="../css/mobile.min.css">
     <link rel="stylesheet" href="../css/past-mobile.css">
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="../assets/favicons/favicon-196x196.png" sizes="196x196" />
@@ -324,8 +316,6 @@
             <div class="col-8 speaker-title"> CEO of Homeinn Hotel Group</div>
             <div class="col-4 speaker-name">Zuyu Ding</div>
             <div class="col-8 speaker-title"> CEO of Ehouse China</div>
-            <div class="col-4 speaker-name">Zuyu Ding</div>
-            <div class="col-8 speaker-title">CEO of Ehouse China</div>
             <div class="col-4 speaker-name">Theresa Tse</div>
             <div class="col-8 speaker-title"> CEO of CP Pharmaceutical Group</div>
             <div class="col-4 speaker-name">Lawton R. Burns</div>
