--- a/html/home.html
+++ b/html/home.html
@@ -3,17 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/icofont.css">
-    <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/navbar.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/desktop.min.css">
     <link rel="stylesheet" href="../css/home.css">
-    <link rel="stylesheet" href="../css/global-mobile.css">
-    <link rel="stylesheet" href="../css/navbar-mobile.css">
-    <link rel="stylesheet" href="../css/header-mobile.css">
-    <link rel="stylesheet" href="../css/footer-mobile.css">
+    <link rel="stylesheet" href="../css/mobile.min.css">
     <link rel="stylesheet" href="../css/home-mobile.css">
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="../assets/favicons/favicon-196x196.png" sizes="196x196" />
